add some office things to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -76,4 +76,24 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+*.tmp
+
+# Word temporary
+~$*.doc*
+
+# Word Auto Backup File
+Backup of *.doc*
+
+# Excel temporary
+~$*.xls*
+
+# Excel Backup File
+*.xlk
+
+# PowerPoint temporary
+~$*.ppt*
+
+# Visio autosave temporary files
+*.~vsd*
+
 # more can be added from https://github.com/github/gitignore/tree/main/Global
