ignore case study data

--- a/.gitignore
+++ b/.gitignore
@@ -98,3 +98,5 @@ Backup of *.doc*
 
 # more can be added from https://github.com/github/gitignore/tree/main/Global
 
+# ignore case study data files
+CaseData/
