--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,4 @@ Backup of *.doc*
 # ignore case study data files
 CaseData/
 vignettes/Development/Quality control/Publication/Combined_table_large_diffs.xlsx
+vignettes/Development/Quality control/Publication/Combined_table_all.xlsx
