--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,6 @@ out.txt
 
 ParallelTestRunTimes_20_runs_100_times.xlsx
 ParallelTestRunTimes_20_runs.xlsx
+ParallelTestRunTimes_100_runs.xlsx
+ParallelTestRunTimes_20_runs_100_times_future_method.xlsx
+ParallelTestRunTimes_100_runs_100_times.xlsx
